Added and fixed some tests to complete coverage for frames/protocols/reader/writer. Fixed signed decimal support

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 master
 ======
 
-[pending] Test coverage of basic protocol class
+Test coverage of all protocol and frame classes
 
 Test coverage, bug fixes and minor performance improvements to Reader and 
 Writer classes
