--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,16 @@
+transports
+==========
+
+Abstracted libevent requirement and added support for gevent backend
+
+Support non-blocking connect on libevent transport
+
+Removed connection strategies from Connection and deleted ConnectionStrategy
+class. Combined with a simplified and abstracted approach to IO and scheduling
+in the Transports, the strategy for failed connections is more deterministic
+and left in the hands of the user.
+
+
 0.3.2
 =====
 
