--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.3.3
+=====
+
+Added cap to ChannelPool. This should be used to ensure that all of the broker
+memory is consumed by channels in cases where it is slow to process 
+transactions.
+
 0.3.2
 =====
 
