--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.4.3
+=====
+
+Client sends heartbeat frames on its own rather than simply replying to ones 
+received from the broker
+
+
 0.4.2
 =====
 
@@ -45,6 +52,7 @@ Removed connection strategies from Connection and deleted ConnectionStrategy
 class. Combined with a simplified and abstracted approach to IO and scheduling
 in the Transports, the strategy for failed connections is more deterministic
 and left in the hands of the user.
+
 
 0.3.3
 =====
