--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.5.3
+=====
+
+Added 'haigha.connections' to package. Thanks to @grncdr
+https://github.com/agoragames/haigha/pull/16
+
+
 0.5.2
 =====
 
