--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+0.5.6
+=====
+
+Only catch Exception subclasses in Connection and Channel. Fixes issue #23.
+
+Update to Chai 0.2.0
+
+
 0.5.5
 =====
 
