--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.5.9
+=====
+
+Support array lists in headers. Thanks to @joeyimbasciano
+https://github.com/agoragames/haigha/pull/28
+
+
 0.5.8
 =====
 
